cmake_minimum_required(VERSION 2.6)

if (use_llvm)
    add_definitions(-std=c++11)
    set(clang_version 3.1)
    ##llvm
    set(CMAKE_CXX_COMPILER clang++)
    #set(CMAKE_CXX_FLAGS "-std=c++11")
    set(CMAKE_C_COMPILER clang)
    set(CMAKE_AR llvm-ar-${clang_version})
    set(CMAKE_LINKER llvm-ld-${clang_version})
    set(CMAKE_NM llvm-nm-${clang_version})
    set(CMAKE_OBJDUMP llvm-objdump-${clang_version})
    set(CMAKE_RANLIB llvm-ranlib-${clang_version})
else()
    add_definitions(-std=c++0x)
    set(CMAKE_CXX_COMPILER g++-4.7)
endif()

add_executable(for-range for-range.cpp)
add_executable(initializer-list initializer-list.cpp)
add_executable(type-interface type-interface.cpp)
add_executable(async-test async.cpp)
add_executable(call-once call_once.cpp)
add_executable(test-buf cond.cpp)
add_executable(lambda-test lambda.cpp)
add_executable(time-test time.cpp)

foreach(tgt call-once async-test test-buf time-test)
target_link_libraries(${tgt} pthread)
endforeach()
